# ultra96_ws

config/: fsbl_r5.bif  setup_from_hdf.tcl
ultra96_only_app_cmake/: CMakeLists.txt  armr5_toolchain.cmake
ultra96_only_app_cmake/main/: CMakeLists.txt
